--- a/webServicesv1/src/app/_layout/navigation/navigation.component.html
+++ b/webServicesv1/src/app/_layout/navigation/navigation.component.html
@@ -20,7 +20,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Beer and Bar Roulette</span>
+      <span> 🍺 and pub roulette</span>
     </mat-toolbar>
 
     <!-- Router here -->
