--- a/webServicesv1/src/app/home/home.component.html
+++ b/webServicesv1/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 
 <div class="div"   align="center">
+
     <img class="topic" src="../../assets/placeholder.png" alt="Beer" >
     <img class="topic" src="../../assets/roulette.png" alt="Roulette"> 
+    <h1>Welcome to the ultimate beer and pub roulette!</h1>
 </div>
 
 
@@ -38,7 +40,7 @@
       </p>
 
       <a href="/application"   mat-raised-button color="primary">
-        Start your drinking adventure here!</a>
+        Start your utlimate drinking adventure here!</a>
       
     </mat-card-content>
   </mat-card>
@@ -55,8 +57,7 @@
       At this Page you can find all informations about our devs and the App...
       
     </p>
-    <a href="/about"   mat-stroked-button color="primary">
-      About</a>
+    <a href="/about"   mat-stroked-button color="primary">About Page</a>
     
     </mat-card-content>
     </mat-card>
