--- a/webServicesv1/src/app/_layout/navigation/navigation.component.html
+++ b/webServicesv1/src/app/_layout/navigation/navigation.component.html
@@ -6,8 +6,8 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
        <a mat-list-item href="">Home</a>
-      <a mat-list-item href="/application">Get started!</a>
-      <a mat-list-item href="/about">About</a>
+      <a mat-list-item href="./application">Get started!</a>
+      <a mat-list-item href="./about">About</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
