--- a/webServicesv1/src/app/home/home.component.html
+++ b/webServicesv1/src/app/home/home.component.html
@@ -39,7 +39,7 @@
 
       </p>
 
-      <a href="/application"   mat-raised-button color="primary">
+      <a href="./application"   mat-raised-button color="primary">
         Start your utlimate drinking adventure here!</a>
       
     </mat-card-content>
@@ -57,7 +57,7 @@
       At this Page you can find all informations about our devs and the App...
       
     </p>
-    <a href="/about"   mat-stroked-button color="primary">About Page</a>
+    <a href="./about"   mat-stroked-button color="primary">About Page</a>
     
     </mat-card-content>
     </mat-card>
