--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
 
 <div class="div"   align="center">
 
-    <img class="topic" src="../../assets/placeholder.png" alt="Beer" >
-    <img class="topic" src="../../assets/roulette.png" alt="Roulette"> 
+    <!-- <img class="topic" src="http://i65.tinypic.com/o56xif.png" alt="Beer"> -->
+    <img class="topic" src="http://i67.tinypic.com/349ctiw.png" alt="Beer" >
+    <img class="topic" src="http://i64.tinypic.com/28qm3m.png" alt="Roulette"> 
     <h1>Welcome to the ultimate beer and pub roulette!</h1>
 </div>
 
