--- a/src/app/application/application.component.scss
+++ b/src/app/application/application.component.scss
@@ -5,3 +5,13 @@ agm-map {
 mat-slider {
   width: 300px;
 }
+
+.form {
+  min-width: 150px;
+  max-width: 300px;
+  width: 100%;
+}
+
+.full-width {
+  width: 100%;
+}
