result page added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,18 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.div {
+    padding: 10px;
+    background-color:rgb(190, 190, 190);
+}
+
+.topic {
+    max-width: 15%;
+
+}
+
+.cardDiv{
+    padding: 5px;
+}
+
