--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -13,17 +13,23 @@
 
     <!-- Google Maps  -->
     <mat-step label="Postion">
-      <h5>Set your position on the map! Use the mouse or use your postal code alternatively                     </h5>  
-      <p>coords: {{lat}} {{lng}}</p>
+      <h5>Set your position on the map! Use the mouse to set your location                   </h5>  
+      <!-- <p>coords: {{lat}} {{lng}}</p> -->
         <agm-map [latitude]="lat" [longitude]="lng" (mapClick)="onChoseLocation($event)">
           <agm-marker [latitude]="lat" [longitude]="lng" *ngIf="locationChosen"></agm-marker>
         </agm-map>
+        
+        
+        
+      <!--         
         <p>enter your postal code here</p>
+        
+        
         <form class="form">
           <mat-form-field class="full-width">
             <input matInput placeholder="your postal code e.g. 74821">
           </mat-form-field>
-        </form>
+        </form> -->
 
 
         <!-- copy from https://github.com/bodrovis/GoogleMapsAngular/blob/master/src/app/map/map.component.html   [(ngModel)]='location.address_zip'-->
@@ -64,7 +70,7 @@
         <li>You are a driver: <strong> {{buttonValue}}  </strong> </li>
       </ul>
 
-      <a href="./application"   mat-raised-button color="primary"> Get Results!</a>
+      <a href="./result"   mat-raised-button color="primary"> Get Results!</a>
       
     </mat-step>
 
