--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -15,7 +15,7 @@
     <mat-step label="Postion">
       <h5>Set your position on the map! Use the mouse to set your location                   </h5>  
       <!-- <p>coords: {{lat}} {{lng}}</p> -->
-        <agm-map [latitude]="lat" [longitude]="lng" (mapClick)="onChoseLocation($event)">
+        <agm-map [latitude]="lat" [longitude]="lng" (mapClick)="onChoseLocation($event)" [zoom]="6">
           <agm-marker [latitude]="lat" [longitude]="lng" *ngIf="locationChosen"></agm-marker>
         </agm-map>
         
