--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -62,7 +62,7 @@
 
 
 
-    <mat-step label="Generate your personal Result!">
+    <mat-step label="Generate your personal result!">
       <p>Your result for:</p>
       <ul>
         <li>Your positon: near <strong> Latitude: {{lat}} Longitude: {{lng}} </strong> </li>
