--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -66,7 +66,7 @@
         <li>You are a driver: <strong> {{buttonValue}}  </strong> </li>
       </ul>
 
-      <a href="./result"   mat-raised-button color="primary"> Get Results!</a>
+      <a href="./result"   mat-raised-button color="primary" (click)="click()"> Get Results!</a>
       
     </mat-step>    
 
